[package]
name = "RSWeb"
version = "1.0.0"
edition = "2021"
description = "A simple program which grabs JSON data from a website. Made generally for learning purposes."

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.5", features = ["full"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }